{
  "version": 4,
  "terraform_version": "1.2.6",
  "serial": 73,
  "lineage": "48e5013d-99c4-12cf-9dd2-fa206b0d837e",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/17fc1a23-7619-4af8-9180-e8388fc413a3/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/Azuredevops-lb/frontendIPConfigurations/PublicIPAddress",
                "name": "PublicIPAddress",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/17fc1a23-7619-4af8-9180-e8388fc413a3/resourceGroups/Azuredevops/providers/Microsoft.Network/publicIPAddresses/Azuredevops-PublicIp"
              }
            ],
            "id": "/subscriptions/17fc1a23-7619-4af8-9180-e8388fc413a3/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/Azuredevops-lb",
            "location": "southcentralus",
            "name": "Azuredevops-lb",
            "resource_group_name": "Azuredevops",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "udacity"
            }
          },
          "dependencies": [
            "azurerm_public_ip.main",
            "data.azurerm_resource_group.Rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/17fc1a23-7619-4af8-9180-e8388fc413a3/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/Azuredevops-lb/backendAddressPools/Azuredevops-lb-backend-pool",
            "loadbalancer_id": "/subscriptions/17fc1a23-7619-4af8-9180-e8388fc413a3/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/Azuredevops-lb",
            "name": "Azuredevops-lb-backend-pool"
          },
          "dependencies": [
            "azurerm_lb.main",
            "azurerm_public_ip.main",
            "data.azurerm_resource_group.Rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/17fc1a23-7619-4af8-9180-e8388fc413a3/resourceGroups/Azuredevops/providers/Microsoft.Network/networkInterfaces/Azuredevops-0-nic",
            "internal_domain_name_suffix": "qtqld32ynxounnru0kq1s204kc.jx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/17fc1a23-7619-4af8-9180-e8388fc413a3/resourceGroups/Azuredevops/providers/Microsoft.Network/virtualNetworks/Azuredevops-network/subnets/Azuredevops-subnet"
              }
            ],
            "location": "southcentralus",
            "name": "Azuredevops-0-nic",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "Azuredevops",
            "tags": {
              "environment": "udacity"
            }
          },
          "dependencies": [
            "azurerm_subnet.main",
            "azurerm_virtual_network.main",
            "data.azurerm_resource_group.Rg"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/17fc1a23-7619-4af8-9180-e8388fc413a3/resourceGroups/Azuredevops/providers/Microsoft.Network/networkInterfaces/Azuredevops-1-nic",
            "internal_domain_name_suffix": "qtqld32ynxounnru0kq1s204kc.jx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.2.6",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/17fc1a23-7619-4af8-9180-e8388fc413a3/resourceGroups/Azuredevops/providers/Microsoft.Network/virtualNetworks/Azuredevops-network/subnets/Azuredevops-subnet"
              }
            ],
            "location": "southcentralus",
            "name": "Azuredevops-1-nic",
            "private_ip_address": "10.0.2.6",
            "private_ip_addresses": [
              "10.0.2.6"
            ],
            "resource_group_name": "Azuredevops",
            "tags": {
              "environment": "udacity"
            }
          },
          "dependencies": [
            "azurerm_subnet.main",
            "azurerm_virtual_network.main",
            "data.azurerm_resource_group.Rg"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/17fc1a23-7619-4af8-9180-e8388fc413a3/resourceGroups/Azuredevops/providers/Microsoft.Network/networkInterfaces/Azuredevops-2-nic",
            "internal_domain_name_suffix": "qtqld32ynxounnru0kq1s204kc.jx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.2.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/17fc1a23-7619-4af8-9180-e8388fc413a3/resourceGroups/Azuredevops/providers/Microsoft.Network/virtualNetworks/Azuredevops-network/subnets/Azuredevops-subnet"
              }
            ],
            "location": "southcentralus",
            "name": "Azuredevops-2-nic",
            "private_ip_address": "10.0.2.5",
            "private_ip_addresses": [
              "10.0.2.5"
            ],
            "resource_group_name": "Azuredevops",
            "tags": {
              "environment": "udacity"
            }
          },
          "dependencies": [
            "azurerm_subnet.main",
            "azurerm_virtual_network.main",
            "data.azurerm_resource_group.Rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_backend_address_pool_association",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/17fc1a23-7619-4af8-9180-e8388fc413a3/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/Azuredevops-lb/backendAddressPools/Azuredevops-lb-backend-pool",
            "id": "/subscriptions/17fc1a23-7619-4af8-9180-e8388fc413a3/resourceGroups/Azuredevops/providers/Microsoft.Network/networkInterfaces/Azuredevops-0-nic/ipConfigurations/internal|/subscriptions/17fc1a23-7619-4af8-9180-e8388fc413a3/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/Azuredevops-lb/backendAddressPools/Azuredevops-lb-backend-pool",
            "ip_configuration_name": "internal",
            "network_interface_id": "/subscriptions/17fc1a23-7619-4af8-9180-e8388fc413a3/resourceGroups/Azuredevops/providers/Microsoft.Network/networkInterfaces/Azuredevops-0-nic"
          },
          "dependencies": [
            "azurerm_lb.main",
            "azurerm_lb_backend_address_pool.main",
            "azurerm_network_interface.main",
            "azurerm_public_ip.main",
            "azurerm_subnet.main",
            "azurerm_virtual_network.main",
            "data.azurerm_resource_group.Rg"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/17fc1a23-7619-4af8-9180-e8388fc413a3/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/Azuredevops-lb/backendAddressPools/Azuredevops-lb-backend-pool",
            "id": "/subscriptions/17fc1a23-7619-4af8-9180-e8388fc413a3/resourceGroups/Azuredevops/providers/Microsoft.Network/networkInterfaces/Azuredevops-1-nic/ipConfigurations/internal|/subscriptions/17fc1a23-7619-4af8-9180-e8388fc413a3/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/Azuredevops-lb/backendAddressPools/Azuredevops-lb-backend-pool",
            "ip_configuration_name": "internal",
            "network_interface_id": "/subscriptions/17fc1a23-7619-4af8-9180-e8388fc413a3/resourceGroups/Azuredevops/providers/Microsoft.Network/networkInterfaces/Azuredevops-1-nic"
          },
          "dependencies": [
            "azurerm_lb.main",
            "azurerm_lb_backend_address_pool.main",
            "azurerm_network_interface.main",
            "azurerm_public_ip.main",
            "azurerm_subnet.main",
            "azurerm_virtual_network.main",
            "data.azurerm_resource_group.Rg"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/17fc1a23-7619-4af8-9180-e8388fc413a3/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/Azuredevops-lb/backendAddressPools/Azuredevops-lb-backend-pool",
            "id": "/subscriptions/17fc1a23-7619-4af8-9180-e8388fc413a3/resourceGroups/Azuredevops/providers/Microsoft.Network/networkInterfaces/Azuredevops-2-nic/ipConfigurations/internal|/subscriptions/17fc1a23-7619-4af8-9180-e8388fc413a3/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/Azuredevops-lb/backendAddressPools/Azuredevops-lb-backend-pool",
            "ip_configuration_name": "internal",
            "network_interface_id": "/subscriptions/17fc1a23-7619-4af8-9180-e8388fc413a3/resourceGroups/Azuredevops/providers/Microsoft.Network/networkInterfaces/Azuredevops-2-nic"
          },
          "dependencies": [
            "azurerm_lb.main",
            "azurerm_lb_backend_address_pool.main",
            "azurerm_network_interface.main",
            "azurerm_public_ip.main",
            "azurerm_subnet.main",
            "azurerm_virtual_network.main",
            "data.azurerm_resource_group.Rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/17fc1a23-7619-4af8-9180-e8388fc413a3/resourceGroups/Azuredevops/providers/Microsoft.Network/networkSecurityGroups/Azuredevops-netwrk_security_group",
            "location": "southcentralus",
            "name": "Azuredevops-netwrk_security_group",
            "resource_group_name": "Azuredevops",
            "security_rule": [],
            "tags": {
              "environment": "udacity"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.azurerm_resource_group.Rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "rule1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Deny",
            "description": "This rule deny the inbound traffic from internet",
            "destination_address_prefix": "Internet",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/17fc1a23-7619-4af8-9180-e8388fc413a3/resourceGroups/Azuredevops/providers/Microsoft.Network/networkSecurityGroups/Azuredevops-netwrk_security_group/securityRules/denyInboundToVMs",
            "name": "denyInboundToVMs",
            "network_security_group_name": "Azuredevops-netwrk_security_group",
            "priority": 100,
            "protocol": "*",
            "resource_group_name": "Azuredevops",
            "source_address_prefix": "0.0.0.0/0",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.main",
            "data.azurerm_resource_group.Rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "rule2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "This rule allow the inbound traffic from other vms",
            "destination_address_prefix": "VirtualNetwork",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/17fc1a23-7619-4af8-9180-e8388fc413a3/resourceGroups/Azuredevops/providers/Microsoft.Network/networkSecurityGroups/Azuredevops-netwrk_security_group/securityRules/allowInboundToVms",
            "name": "allowInboundToVms",
            "network_security_group_name": "Azuredevops-netwrk_security_group",
            "priority": 101,
            "protocol": "*",
            "resource_group_name": "Azuredevops",
            "source_address_prefix": "VirtualNetwork",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.main",
            "data.azurerm_resource_group.Rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "rule3",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "This rule allow the outbound traffic to other vms",
            "destination_address_prefix": "VirtualNetwork",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Outbound",
            "id": "/subscriptions/17fc1a23-7619-4af8-9180-e8388fc413a3/resourceGroups/Azuredevops/providers/Microsoft.Network/networkSecurityGroups/Azuredevops-netwrk_security_group/securityRules/allowOutboundToVms",
            "name": "allowOutboundToVms",
            "network_security_group_name": "Azuredevops-netwrk_security_group",
            "priority": 102,
            "protocol": "*",
            "resource_group_name": "Azuredevops",
            "source_address_prefix": "VirtualNetwork",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.main",
            "data.azurerm_resource_group.Rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "rule4",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Deny",
            "description": "This rule deny the inbound traffic from internet",
            "destination_address_prefix": "VirtualNetwork",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/17fc1a23-7619-4af8-9180-e8388fc413a3/resourceGroups/Azuredevops/providers/Microsoft.Network/networkSecurityGroups/Azuredevops-netwrk_security_group/securityRules/allowInboundLB",
            "name": "allowInboundLB",
            "network_security_group_name": "Azuredevops-netwrk_security_group",
            "priority": 104,
            "protocol": "*",
            "resource_group_name": "Azuredevops",
            "source_address_prefix": "AzureLoadBalancer",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.main",
            "data.azurerm_resource_group.Rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/17fc1a23-7619-4af8-9180-e8388fc413a3/resourceGroups/Azuredevops/providers/Microsoft.Network/publicIPAddresses/Azuredevops-PublicIp",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.225.202.63",
            "ip_version": "IPv4",
            "location": "southcentralus",
            "name": "Azuredevops-PublicIp",
            "resource_group_name": "Azuredevops",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "udacity"
            }
          },
          "dependencies": [
            "data.azurerm_resource_group.Rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/17fc1a23-7619-4af8-9180-e8388fc413a3/resourceGroups/Azuredevops/providers/Microsoft.Network/virtualNetworks/Azuredevops-network/subnets/Azuredevops-subnet",
            "name": "Azuredevops-subnet",
            "resource_group_name": "Azuredevops",
            "virtual_network_name": "Azuredevops-network"
          },
          "dependencies": [
            "azurerm_virtual_network.main",
            "data.azurerm_resource_group.Rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/22"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "f7b1e084-6d98-46dd-b634-d2a1b9735e52",
            "id": "/subscriptions/17fc1a23-7619-4af8-9180-e8388fc413a3/resourceGroups/Azuredevops/providers/Microsoft.Network/virtualNetworks/Azuredevops-network",
            "location": "southcentralus",
            "name": "Azuredevops-network",
            "resource_group_name": "Azuredevops",
            "tags": {
              "environment": "udacity"
            }
          },
          "dependencies": [
            "data.azurerm_resource_group.Rg"
          ]
        }
      ]
    }
  ]
}